fix jumping granite tabs

--- a/common/gtk-3.0/3.18/gtk-dark.css
+++ b/common/gtk-3.0/3.18/gtk-dark.css
@@ -3504,6 +3504,9 @@ GraniteWidgetsStaticNotebook .frame {
 .source-list.category-expander:checked {
   -gtk-icon-source: -gtk-icontheme("pan-down-symbolic"); }
 
+.dynamic-notebook .notebook tab .button > GtkImage {
+  padding: 0; }
+
 GraniteWidgetsWelcome {
   background-color: #404552; }
 
