--- a/common/gtk-3.0/3.18/sass/_granite.scss
+++ b/common/gtk-3.0/3.18/sass/_granite.scss
@@ -143,6 +143,13 @@ GraniteWidgetsStaticNotebook .frame {
 }
 
 //
+// Notebook
+//
+.dynamic-notebook .notebook tab {
+  .button > GtkImage { padding: 0; }
+}
+
+//
 // Welcome
 //
 GraniteWidgetsWelcome {
